[gd_scene load_steps=31 format=3 uid="uid://nuahsfm77qjp"]

[ext_resource type="PackedScene" uid="uid://dqgxt6ms0uyu8" path="res://scenes/entity_composition/health_component.tscn" id="1_38jc2"]
[ext_resource type="Script" path="res://scenes/enemies/termite_larvae.gd" id="1_l1k41"]
[ext_resource type="PackedScene" uid="uid://can23048py54m" path="res://scenes/entity_composition/hurt_box.tscn" id="3_dfm05"]
[ext_resource type="Script" path="res://scenes/entity_composition/velocity_component.gd" id="5_b7uhe"]
[ext_resource type="Texture2D" uid="uid://wc4vc15cxwf4" path="res://assets/sprites/termite-larvae/termite-larvae-crawl-sheet.png" id="6_0w3vn"]
[ext_resource type="Texture2D" uid="uid://cedkfkhy1lcit" path="res://assets/sprites/termite-larvae/termite-larvae-squish-sheet.png" id="6_3b56k"]
[ext_resource type="PackedScene" uid="uid://clwybwx42qmpu" path="res://scenes/core/despawner.tscn" id="7_dq5ch"]
[ext_resource type="PackedScene" uid="uid://w8btqivawm2i" path="res://scenes/entity_composition/enemy_walk_direction.tscn" id="7_nyc36"]
[ext_resource type="PackedScene" uid="uid://c1rh7amfumorl" path="res://scenes/core/bug_audio.tscn" id="9_llf8h"]
[ext_resource type="Script" path="res://scenes/entity_composition/edge_detector.gd" id="10_wsf42"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bqby1"]
size = Vector2(90, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdvc8"]
size = Vector2(90, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi5to"]
atlas = ExtResource("6_0w3vn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_giyt4"]
atlas = ExtResource("6_0w3vn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie8b6"]
atlas = ExtResource("6_0w3vn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7edo8"]
atlas = ExtResource("6_0w3vn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke5dx"]
atlas = ExtResource("6_0w3vn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_16486"]
atlas = ExtResource("6_0w3vn")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_biwvk"]
atlas = ExtResource("6_0w3vn")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p47c6"]
atlas = ExtResource("6_3b56k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3pbh"]
atlas = ExtResource("6_3b56k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwh08"]
atlas = ExtResource("6_3b56k")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggeb6"]
atlas = ExtResource("6_3b56k")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk4st"]
atlas = ExtResource("6_3b56k")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6uly"]
atlas = ExtResource("6_3b56k")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fopoa"]
atlas = ExtResource("6_3b56k")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bm87"]
atlas = ExtResource("6_3b56k")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsmlc"]
atlas = ExtResource("6_3b56k")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4wioa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi5to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giyt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie8b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7edo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke5dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16486")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biwvk")
}],
"loop": true,
"name": &"crawl",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p47c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3pbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwh08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggeb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk4st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6uly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fopoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bm87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsmlc")
}],
"loop": false,
"name": &"death",
"speed": 20.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_en3yu"]
cull_mode = 2
polygon = PackedVector2Array(2.08696, -9.89687, 13.2174, -9.89687, 20.8696, -4.61854, 22.2609, 4.61854, 16, 9.89688, 6.26087, 11.2165, 2.78261, 11.2165, -3.47826, 10.5567, -9.04348, 11.2165, -12.5217, 10.5567, -16.6957, 11.2165, -22.9565, 11.2165, -31.3043, 4.61854, -32, -1.31958, -25.0435, -8.57729, -16.6957, -8.57729, -12.5217, -8.57729, -7.65217, -9.23708)

[node name="TermiteLarvae" type="CharacterBody2D" node_paths=PackedStringArray("velocity_component", "toggle_direction_timer")]
modulate = Color(0.533333, 0.533333, 0.533333, 1)
collision_layer = 8
collision_mask = 262
platform_floor_layers = 4294967042
platform_wall_layers = 4
script = ExtResource("1_l1k41")
velocity_component = NodePath("VelocityComponent")
toggle_direction_timer = NodePath("EnemyWalkDirection/DefaultToggleDirectionTimer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bqby1")

[node name="HealthComponent" parent="." instance=ExtResource("1_38jc2")]

[node name="HurtBox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_dfm05")]
collision_layer = 128
collision_mask = 1056
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_rdvc8")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("5_b7uhe")
max_speed = 200.0
wall_slide_speed = 0.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9.53674e-07, -3.8147e-06)
scale = Vector2(1.4375, 1.51563)
sprite_frames = SubResource("SpriteFrames_4wioa")
animation = &"death"
autoplay = "crawl"

[node name="LightOccluder2D" type="LightOccluder2D" parent="AnimatedSprite2D"]
show_behind_parent = true
occluder = SubResource("OccluderPolygon2D_en3yu")

[node name="Despawner" parent="." instance=ExtResource("7_dq5ch")]

[node name="EnemyWalkDirection" parent="." instance=ExtResource("7_nyc36")]

[node name="DefaultToggleDirectionTimer" type="Timer" parent="EnemyWalkDirection"]
wait_time = 8.0
autostart = true

[node name="BugAudio" parent="." instance=ExtResource("9_llf8h")]

[node name="EdgeDetector" type="Node2D" parent="." node_paths=PackedStringArray("left_ray_cast", "right_ray_cast")]
script = ExtResource("10_wsf42")
left_ray_cast = NodePath("LeftRayCast")
right_ray_cast = NodePath("RightRayCast")

[node name="LeftRayCast" type="RayCast2D" parent="EdgeDetector"]
position = Vector2(-44, 14)
collision_mask = 262
collide_with_areas = true

[node name="RightRayCast" type="RayCast2D" parent="EdgeDetector"]
position = Vector2(44, 14)
collision_mask = 262
collide_with_areas = true

[connection signal="died" from="HealthComponent" to="." method="_on_died"]
[connection signal="despawn" from="Despawner" to="." method="finish_death"]
[connection signal="timeout" from="EnemyWalkDirection/DefaultToggleDirectionTimer" to="." method="_on_toggle_direction_timer_timeout"]
[connection signal="on_hanging_off_ground" from="EdgeDetector" to="." method="_on_edge_detector_on_hanging_off_ground"]
